--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,3 +9,4 @@ $default-button-color:#d62d20;
 $default-button-hover-color:#de564c;
 $default-button-text-color:#ffffff;
 $default-button-border-radius:0.3em;
+$add-item-button-color:blue;
